intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
* {
  margin: 0;
  padding: 0;
}



.container {
  text-align: center;
  display: grid;
  grid-template-columns: minmax(5%, 200px) 1fr;
  grid-template-rows: 10% 10% 70% 5%;
}

.container div {
  padding: 15px;
  font-size: 32px;
  font-family: Helvetica;
  font-weight: bold;
  color: white;
}

.header {
  background-color: #393f4d;
  
  grid-column: 1 / -1;
  
}

/* .logo{
  grid-column: 1/1;
} */


.menu ul,
.menu li {
  font-size: 16px;
}

.menu ul{
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr;
  grid-template-rows: 1fr;
}

/* .menu ul li:last-child{
  grid-column: 3/5;
} */

/* .menu li{
  grid-column: ;
} */

.sidebar {
  background-color: #C50208;
  grid-column: 1;
  grid-row: 2 / 4;
  display: grid;
  grid-template-columns: repeat(auto-fit,minmax(1fr, 1fr));
  grid-template-rows: repeat(auto-fit, minmax(100px, 1fr));
  gap: 1vh;
}

.sidebar .photo {
  background-color: white;
  color: black;
  font-size: 12px;
  font-weight: normal;
  border-radius: 10px;
}


.sidebar .side-content {
  background-color: white;
  color: black;
  font-size: 16px;
  font-weight: normal;
}

.nav {
  background-color: #C50208;
  /* grid-column: span 3; */
  grid-row: 2;

}

.nav ul li {
  font-size: 16px;
  text-transform: uppercase;
}

.article {
  background-color: #bccbde;
  grid-row: 3/4;
  display: grid;
  gap: 1vh;
  grid-template-columns: repeat(auto-fit, minmax(30vh, 1fr));
  grid-template-rows: repeat(auto-fit, minmax(15vh, 1fr));
}

.article p {
  font-size: 18px;
  font-family: sans-serif;
  color: white;
  text-align: left;
}

.article .card {
  background-color: #FFFFFF;
  color: black;
  text-align: center;
}

.card p {
  color: black;
  font-weight: normal;
  font-size: 14px;
}

.card .title {
  font-size: 18px;
  text-align: center;
}

.footer {
  background-color: #393f4d;
  grid-area: -1 / 1 / -2 / -1;
}

.footer p {
  font-size: 13px;
  font-weight: normal;
}

